--- a/main.css
+++ b/main.css
@@ -406,6 +406,7 @@ h2 {
     transition: right 0.5s ease-in-out;
     z-index: 999; /* Below the fixed nav */
     padding-bottom: 20px;
+    height: 100dvh;
 }
 
 .off-canvas-menu ul {
